Altered media query to put vertical scroll bar on the right edge when visible

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -231,6 +231,10 @@
   #app:has(#menu-toggler[aria-expanded=true]) #app__main {
     display: none;
   }
+  #app:has(#menu-toggler[aria-expanded=true]) #app__nav {
+    grid-column: 1/3;
+    width: 100%;
+  }
 }
 
 .content-container {
