Amended banner heading so it looks liek the doc site

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,7 +16,7 @@
 }
 #app__header > span:first-child {
   color: var(--br-comp-all-area-header-text);
-  font-size: var(--br-unit-font-size-5);
+  font-size: var(--br-unit-font-size-3);
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -233,7 +233,7 @@
   }
   #app:has(#menu-toggler[aria-expanded=true]) #app__nav {
     grid-column: 1/3;
-    width: 100%;
+    width: calc(100% - 0.5rem);
   }
 }
 
