--- a/_content/BlazorRamp.Core/assets/css/core.css
+++ b/_content/BlazorRamp.Core/assets/css/core.css
@@ -675,7 +675,7 @@ dialog.br-announcement-history__popover:focus-visible {
   appearance: none;
   position: fixed;
   bottom: calc(var(--br-unit-space-5) * 2);
-  right: calc(var(--br-unit-space-5) * 2.5);
+  inset-inline-end: calc(var(--br-unit-space-5) * 2.5);
   border-radius: var(--br-comp-history-trigger-pane-surface-border-radius);
   border-width: var(--br-comp-history-trigger-pane-surface-border-width);
   border-style: var(--br-comp-history-trigger-pane-surface-border-style);
@@ -713,12 +713,13 @@ dialog.br-announcement-history__popover:focus-visible {
   height: auto;
   min-height: var(--br-unit-wcag-target-3a);
   min-width: var(--br-unit-wcag-target-3a);
-  padding: calc(var(--br-unit-space-2) * 5);
+  padding: var(--br-unit-space-3);
   margin: 0;
   clip: auto;
   clip-path: none;
   overflow: hidden;
   white-space: normal;
+  min-width: 100px;
 }
 .br-announcement-history__trigger:focus-visible {
   outline-offset: var(--br-comp-history-trigger-outline-offset);
