--- a/_content/BlazorRamp.BusyIndicator/assets/css/busy-indicator.css
+++ b/_content/BlazorRamp.BusyIndicator/assets/css/busy-indicator.css
@@ -1,4 +1,18 @@
-﻿.br-busy-indicator {
+﻿:root {
+  --br-comp-busy-pane-base-background: var(--br-comp-all-overlay-colour);
+  --br-comp-busy-pane-base-border-radius: var(--br-comp-all-pane-base-border-radius);
+  --br-comp-busy-pane-surface-background: transparent;
+  --br-comp-busy-pane-surface-line-height: var(--br-comp-all-pane-surface-line-height);
+  --br-comp-busy-area-content-background: var(--br-comp-all-focus-indicator-colour);
+  --br-comp-busy-area-content-font: var(--br-comp-all-area-content-font);
+  --br-comp-busy-area-content-font-weight: var(--br-comp-all-area-content-font-weight);
+  --br-comp-busy-area-content-text: var(--br-unit-colour-canvas-text-inverted);
+  --br-comp-busy-area-content-font-size: var(--br-unit-font-size-label);
+  --br-comp-busy-spinner-colour: var(--br-comp-all-focus-indicator-colour);
+  --br-comp-busy-area-content-border-radius: var(--br-comp-all-area-content-border-radius);
+}
+
+.br-busy-indicator {
   z-index: 999;
   position: fixed;
   display: none;
@@ -6,16 +20,11 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: var(--br-comp-all-overlay-colour);
+  background-color: var(--br-comp-busy-pane-base-background);
   justify-content: center;
   align-items: flex-start;
-  border: var(--br-unit-border-2) solid transparent;
-  border-radius: var(--br-unit-radius-2);
-  line-height: var(--br-unit-line-height-1);
+  border-radius: var(--br-comp-busy-pane-base-border-radius);
   pointer-events: none;
-}
-.br-busy-indicator:focus-visible {
-  border-color: var(--br-comp-all-focus-indicator-colour);
 }
 .br-busy-indicator--display-flex {
   display: flex;
@@ -27,9 +36,10 @@
   align-items: center;
 }
 .br-busy-indicator__content {
+  line-height: var(--br-comp-busy-pane-surface-line-height);
   width: fit-content;
   padding: 1rem;
-  background-color: transparent;
+  background-color: var(--br-comp-busy-pane-surface-background);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -39,16 +49,18 @@
   max-width: 500px;
 }
 .br-busy-indicator__text {
-  font-size: var(--br-unit-font-size-label);
-  color: var(--br-unit-colour-canvas-text-inverted);
-  background-color: var(--br-comp-all-focus-indicator-colour);
+  font-size: var(--br-comp-busy-area-content-font-size);
+  font: var(--br-comp-busy-area-content-font);
+  font-weight: var(--br-comp-busy-area-content-font-weight);
+  color: var(--br-comp-busy-area-content-text);
+  background-color: var(--br-comp-busy-area-content-background);
   padding: var(--br-unit-space-3);
-  border-radius: var(--br-unit-radius-3);
+  border-radius: var(--br-comp-busy-area-content-border-radius);
 }
 .br-busy-indicator__spinner {
   height: 3rem;
   width: 3rem;
-  color: var(--br-comp-all-focus-indicator-colour);
+  color: var(--br-comp-busy-spinner-colour);
   display: inline-block;
   background-color: currentColor;
   mask-image: var(--br-svg-quarter-circle-icon);
