--- a/css/app.css
+++ b/css/app.css
@@ -28,7 +28,7 @@
 }
 
 .loading-progress circle:last-child {
-    stroke: olive;
+    stroke: tomato;
     stroke-dasharray: calc(3.141 * var(--blazor-load-percentage, 0%) * 0.8), 500%;
     transition: stroke-dasharray 0.05s ease-in-out;
 }
